--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ Reset
   --Black: #222;
   --Orange: #e24647;
   --white: #fff;
+  --grey: #959595;
 }
 
 * {
@@ -255,6 +256,56 @@ Hero Area
   height: 100vh;
 }
 
+.glide__bullet {
+  background-color: #222;
+  width: 1.2rem;
+  height: 1.2rem;
+  /* padding: .2rem; */
+}
+
+.glide__arrow {
+  padding: 1.5rem 1.7rem;
+  opacity: 0;
+  border: none;
+  background-color: var(--grey);
+  transition: all .5s ease-in-out .2s;
+}
+
+.glide__arrow:hover {
+  background-color: var(--Black);
+}
+
+.glide__arrow--left {
+  left: 20rem;
+}
+
+.glide__arrow--right {
+  position: absolute;
+  right: 20rem;
+}
+
+.hero:hover .glide__arrow {
+  opacity: 1;
+}
+
+.hero:hover .glide__arrow--left {
+  left: 23rem;
+}
+
+.hero:hover .glide__arrow--right {
+  right: 23rem;
+}
+
+.glide__arrow svg {
+  height: 1.8rem;
+  width: 1.8rem;
+  fill: var(--primaryColor);
+}
+
+.glide__arrow {
+  border-radius: 50%;
+}
+
 .hero__center {
   display: flex;
   align-items: center;
@@ -301,11 +352,14 @@ Hero Area
 .hero__right {
   flex: 0 0 50%;
   position: relative;
+  text-align: center;
 }
 
 .hero__right img.banner_03 {
-  width: 75%;
+  width: 70%;
 }
+
+
 
 /*
 ======================
@@ -317,6 +371,7 @@ Hero Media Query
     flex-direction: column;
     text-align: center;
   }
+
   .hero__right {
     top: 50%;
     position: absolute;
@@ -324,13 +379,15 @@ Hero Media Query
 
   .hero__left {
     position: absolute;
+    padding: 0 1rem;
     top: 20%;
   }
 
-  .hero__right img.banner_03 {
+  .hero__right img {
     width: 55%;
   }
-  .hero__right img.banner_02 {
-    width: 75%;
+
+  .glide__arrows {
+    display: none;
   }
 }
