--- a/styles.css
+++ b/styles.css
@@ -375,11 +375,12 @@ Hero Area
 .hero__btn {
   display: inline-block;
   font-weight: 700;
-  padding: 1.6rem 2.2rem;
+  font-size: 1.4rem;
   background-color: var(--Black);
   color: var(--primaryColor);
   cursor: pointer;
   margin-top: 1rem;
+  padding: 1.5rem 4rem;
   border: 1px solid var(--Black);
   transition: all 0.3s ease-in-out;
 }
@@ -396,13 +397,6 @@ Hero Area
 
 .hero__left h1 {
   margin-top: 1rem;
-}
-
-.hero__btn:link,
-.hero__btn:visited {
-  display: inline-block;
-  padding: 1rem 1.6rem;
-  background-color: var(--Black);
 }
 
 .hero__right {
@@ -439,6 +433,10 @@ Hero Media Query
 
   .hero__right img {
     width: 55%;
+  }
+
+  .hero__btn {
+    padding: 1.1rem 2.8rem;
   }
 
   .hero .glide__arrows {
@@ -788,4 +786,117 @@ Latest Products Media Query
   .product__header {
     height: 15rem;
   }
+}
+
+/*
+======================
+Product Details
+======================
+*/
+
+.product-detail__container,
+.details__container--left {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.product-detail__container {
+  display: flex;
+  justify-content: center;
+  padding: 2.5rem 0;
+}
+
+.product-detail__left {
+  flex: 0 0 45%;
+}
+
+.product-detail__right {
+  flex: 0 0 55%;
+}
+
+.product-detail__container--left img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.pictures__container {
+  width: 6.2rem;
+}
+
+.pictures__container {
+  padding: 1rem;
+  border: 1px solid var(--primaryColor);
+  border-right-color: transparent;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.pictures__container:not(:last-child) {
+  border-bottom-color: transparent;
+}
+
+.pictures__container:hover {
+  border-color: var(--Orange);
+}
+
+.pictures__container img {
+  transition: .3s;
+}
+
+.pictures__container:hover img {
+  scale: 1.1;
+}
+
+.product__picture {
+  width: 100%;
+  border: 1px solid var(--primaryColor);
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.product-details__btn {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.product-details__btn a {
+  flex: 0 0 47%;
+  display: inline-block;
+  padding: 1.6rem 3rem;
+  text-align: center;
+  color: var(--Black);
+  border: 1px solid var(--Black);
+}
+
+.product-details__btn svg {
+  width: 1.9rem;
+  height: 1.9rem;
+  transition: .3s;
+}
+
+.product-details__btn .add,
+.product-details__btn .buy {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: .3s;
+}
+
+.product-details__btn .add span,
+.product-details__btn .buy span {
+  margin-right: 1rem;
+}
+
+.product-details__btn .add:hover,
+.product-details__btn .buy:hover {
+  background-color: var(--Black);
+  color: var(--primaryColor);
+}
+
+.product-details__btn .add:hover svg,
+.product-details__btn .buy:hover svg {
+  fill: var(--primaryColor);
 }
