--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ Reset
 :root {
   --primaryColor: #f1f1f1;
   --Black: #222;
+  --black2: #555;
   --Orange: #e24647;
   --white: #fff;
   --grey: #959595;
