--- a/styles.css
+++ b/styles.css
@@ -713,6 +713,10 @@ span.dot::before {
   padding-bottom: 1rem;
 }
 
+.product__footer h3 {
+  font-size: 1.6rem;
+}
+
 .product__btn {
   display: inline-block;
   font-weight: 700;
@@ -959,4 +963,26 @@ Category Center
 .category__center {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 3rem 2rem;
+}
+
+@media only screen and (max-width: 999px) {
+  .category__center {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 568px) {
+  .category__center {
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem 1rem;
+  }
+
+  .category__products .product__header {
+    height: 10rem;
+  }
+
+  .category__products .product__header img {
+    object-fit: contain;
+  }
 }
