--- a/styles.css
+++ b/styles.css
@@ -546,6 +546,7 @@ Collection Media Query
 @media only screen and (max-width: 999px) {
   .collection__container {
     width: 80%;
+    margin: 0 auto;
     flex-direction: column;
     height: 65rem;
   }
