--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ Header
 .container {
   max-width: 117rem;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0 1.6rem;
 }
 
 /*
@@ -600,7 +600,7 @@ Latest Products
   align-items: center;
   justify-content: center;
   margin: 0 auto 6rem;
-  padding: 1.5rem 0;
+  padding: 2rem 0;
   background-color: var(--primaryColor);
 }
 
@@ -1232,7 +1232,8 @@ Facility
 .facility-img__container svg {
   width: 3rem;
   height: 3rem;
-  transition: 0.5s;
+  transition: 1s;
+  perspective: 4000;
 }
 
 .facility__box {
@@ -1424,5 +1425,182 @@ Testimonial Media Query
 
   .testimonial .glide__bullets {
     bottom: -8%;
+  }
+}
+
+/*
+======================
+News Section
+======================
+*/
+
+.news {
+  padding-bottom: 8rem;
+}
+
+.new__card {
+  background-color: var(--primaryColor);
+  width: 95%;
+  margin: 0 auto;
+}
+
+.new__card:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.card__footer {
+  padding: 3rem 1.4rem;
+}
+
+.card__footer h3 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: var(--Black);
+  margin-bottom: 1rem;
+}
+
+.card__footer span {
+  display: inline-block;
+  margin-bottom: 1rem;
+  color: var(--black2);
+}
+
+.card__footer p {
+  font-size: 1.5rem;
+  color: var(--black2);
+  margin-bottom: 1.6rem;
+  line-height: 2.7rem;
+}
+
+.card__footer a:link,
+.card__footer a:visited {
+  display: inline-block;
+  padding: 1.4rem 4rem;
+  border: 1px solid var(--Black);
+  color: var(--Black);
+  transition: .3s;
+}
+
+.card__footer a:hover {
+  border: 1px solid var(--Black);
+  color: var(--white);
+  background-color: var(--Black);
+}
+
+/*
+======================
+NewsLetter
+======================
+*/
+
+.newsletter {
+  padding: 6rem 0;
+  border-top: 1px solid var(--primaryColor);
+}
+
+.newsletter__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.newsletter__data h3 {
+  font-size: 2.4rem;
+  font-weight: inherit;
+  margin-bottom: 1rem;
+}
+
+.newsletter__data p {
+  font-size: 1.5rem;
+  color: var(--black2);
+}
+
+.newsletter__email {
+  font-size: 1.4rem;
+  display: inline-block;
+  width: 37rem;
+  padding: 1.6rem;
+  background-color: var(--primaryColor);
+  border: none;
+  text-indent: 1rem;
+}
+
+.newsletter__email:focus {
+  outline: none;
+}
+
+.newsletter__link:link,
+.newsletter__link:visited {
+  display: inline-block;
+  padding: 1.4rem 3rem;
+  margin-left: -.5rem;
+  background-color: var(--Black);
+  color: var(--white);
+  transition: .3s;
+}
+
+.newsletter__link:hover {
+  background-color: #000;
+}
+
+/*
+======================
+Newsletter Media Query
+======================
+*/
+
+@media only screen and (max-width: 998px) {
+
+  .newsletter {
+    padding: 6rem 4rem;
+  }
+
+  .newsletter__content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .newsletter__email {
+    width: 45rem;
+  }
+
+  .newsletter__data {
+    margin-bottom: 2rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .newsletter__content {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .newsletter__email {
+    width: 45rem;
+    display: block;
+    margin-bottom: 1.6rem;
+  }
+
+}
+
+@media only screen and (max-width: 568px) {
+  .newsletter__email {
+    width: 23rem;
+    font-size: 1.2rem;
+  }
+
+  .newsletter__data h3 {
+    font-size: 1.6rem;
+  }
+
+  .newsletter__data p {
+    font-size: 1rem;
+  }
+
+  .newsletter__link:link,
+  .newsletter__link:visited {
+    padding: 1.2rem 2rem;
+    margin-left: 0rem;
   }
 }
